# osrsreboxed-db

./: .gitignore  .gitmodules  MANIFEST.in  README.md  config.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy-pypi.yml
builders/items/: build_item.py  builder.py  infobox_cleaner.py
builders/monsters/: build_monster.py  builder.py  infobox_cleaner.py
data/items/: items-buylimits.json  items-stacked.json  items-unalchable.json  items-wiki-page-titles.json  weapon-stances.json
data/monsters/: monsters-wiki-page-titles.json
data/schemas/: schema-monsters.json
docs/: items-search.json  items-summary.json  npcs-summary.json  objects-summary.json
docs/items-json/: 0.json  1.json  10.json  100.json  1000.json  10000.json  10001.json  10002.json  10003.json  10004.json  10005.json  10006.json  10007.json  10008.json  10009.json  1001.json  10010.json  10011.json  10012.json  10013.json  10014.json  10015.json  10016.json  10017.json  10018.json  10019.json  1002.json  10020.json  10021.json  10023.json  10024.json  10025.json  10026.json  10027.json  10028.json  10029.json  1003.json  10030.json  10031.json  10032.json  (+27956 more)
docs/items-json-slot/: items-2h.json  items-ammo.json  items-body.json  items-cape.json  items-feet.json  items-hands.json  items-head.json  items-legs.json  items-neck.json  items-ring.json  items-shield.json  items-weapon.json
docs/monsters-json/: 1.json  10397.json  10435.json  10523.json  10524.json  10525.json  10526.json  10533.json  10534.json  (+664 more)
test/: test_items_api.py  test_monsters_api.py  test_prayers_api.py
(+38 files in other folders)
