[tool.poetry]
name = "osrsreboxed"
version = "2.3.15"
description = "A complete and up-to-date database of Old School Runescape (OSRS) items, monsters and prayers accessible using a Python API. Up to date version of osrsbox by PH01L"
readme="README.md"
homepage = "https://github.com/0xNeffarion/osrsreboxed-db"
repository = "https://github.com/0xNeffarion/osrsreboxed-db"
authors = ["Neffarion <main@neffware.com>", "PH01L <phoil@osrsbox.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
dataclasses = "^0"

[tool.poetry.dev-dependencies]
setuptools = "60.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
